testsuite/tests/checks/missing_file_error/test.out
q.ads:3:1: error: File p.ads not found
  3 | with P;
    | ^^^^^^^

